--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Deploy your typeform to its own domain using now.sh",
   "main": "deploy.js",
+  "bin": "./bin/typeform-now.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -13,7 +14,6 @@
   "keywords": [
     "now",
     "typeform",
-    "now-sh",
     "zeit"
   ],
   "author": "Trey Griffith <trey@kines.is>",
@@ -21,5 +21,14 @@
   "bugs": {
     "url": "https://github.com/kinesis-exchange/typeform-now/issues"
   },
-  "homepage": "https://github.com/kinesis-exchange/typeform-now#readme"
+  "homepage": "https://github.com/kinesis-exchange/typeform-now#readme",
+  "devDependencies": {
+    "command-line-args": "^5.0.2",
+    "command-line-usage": "^5.0.5",
+    "now": "^11.2.5",
+    "serve": "^9.1.2",
+    "skewered": "^1.0.0",
+    "url-metadata": "^2.1.7"
+  },
+  "dependencies": {}
 }
